# ai-tabletop-facilitator

./: CLAUDE.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker.yml  security.yml
backend/: pyproject.toml
docker/: Dockerfile
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: test-setup.ts
frontend/src/__tests__/: Facilitator.intro.test.tsx  SetupView.planPanel.test.tsx  SetupWizard.test.tsx  errorDetail.test.ts  sessionDraftStorage.test.ts
frontend/src/api/: client.ts  errorDetail.ts
frontend/src/components/setup/: SetupWizard.tsx
frontend/src/lib/: notepad.ts  sessionDraftStorage.ts
frontend/src/pages/: Facilitator.tsx
