[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crittable-backend"
version = "0.0.1"
description = "Backend for Crittable — tabletop exercises for security teams."
requires-python = ">=3.12"
license = { text = "FSL-1.1-ALv2" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "jinja2>=3.1",
    # Yjs CRDT bindings (issue #98 shared notepad). The server runs
    # pycrdt as an opaque relay (path C: apply binary updates from
    # clients, encode state for reconnects). Markdown extraction
    # happens client-side. MIT-licensed, actively maintained — same
    # library Jupyter's Real-Time Collaboration extension uses.
    "pycrdt>=0.10",
    # Provider router — routes LLM calls to ~100 providers (Azure OpenAI,
    # AWS Bedrock, Vertex AI, OpenRouter, OpenAI-direct, internal LLM
    # gateways, etc). The single LLM transport in production. See
    # `docs/llm_providers.md` and issue #193.
    #
    # Dep-intake (per CLAUDE.md): MIT-licensed, actively maintained
    # (BerriAI/litellm — daily commits as of 2026-05). Provider SDKs load
    # lazily; the import-time footprint is small. Pinned to >=1.83 so
    # Anthropic prompt-caching round-trips cleanly (validated in PoC,
    # see issue #193 Phase 0).
    #
    # The ``>=1.83.10`` lower bound is the security floor — every
    # release before it has at least one of the four 2026-05 CVEs
    # (CVE-2026-42208 CRITICAL SQL injection in the proxy path,
    # CVE-2026-40217 HIGH bytecode-rewriting code execution,
    # CVE-2026-42203 HIGH unsandboxed prompt-template code execution,
    # CVE-2026-42271 HIGH MCP stdio command execution). 1.83.7 fixes
    # three of them; 1.83.10 fixes the last. Without this floor, on
    # ``python:3.14-slim`` pip silently backtracks to 1.83.0 (because
    # litellm 1.83.10+ pins ``requires_python = "<3.14"``) and the
    # vulnerable version ships. The Dockerfile pin to ``python:3.13``
    # is what actually lets pip resolve to 1.86.2; this constraint is
    # the belt to that Dockerfile's braces.
    "litellm>=1.83.10",
    # Transitive of litellm, pinned to the patched range here so a
    # build never regresses below the fix for GHSA-mf9w-mj56-hr94
    # (CVE-2026-28684) — symlink-following file overwrite in
    # ``set_key`` when the .env path is a symlink across filesystems.
    # We never call ``set_key`` ourselves, and we also never call
    # ``load_dotenv`` — ``app/llm/_shared.py`` sets
    # ``LITELLM_MODE=PRODUCTION`` before ``import litellm`` precisely
    # to skip litellm's import-time ``dotenv.load_dotenv()``. So the
    # runtime attack surface from this CVE is zero for us. The pin
    # exists because Trivy flags the *installed package* regardless
    # of whether the vulnerable code path runs, reports it as
    # HIGH/CRITICAL from a non-GitHub vendor, and gates the runtime-
    # image push on it. Fix landed in python-dotenv 1.2.2; litellm's
    # own constraint stays at ``>=1.0.0,<2.0``, so this is a
    # deliberate floor lift to keep the gate green without changing
    # behavior.
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    # Anthropic SDK — used only by the live-test ``anthropic_client`` /
    # ``judge_client`` fixtures in ``backend/tests/live/`` for direct
    # API calls (cost-tracked via ``_wrap_messages_create``). Production
    # routing goes through LiteLLM; the SDK is not imported outside
    # the live-test fixture path.
    "anthropic>=0.40",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: hits the real Anthropic API; cost ~$0.01/test; auto-skipped unless LLM_API_KEY is set",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
